# lapack

./: .claude  .envrc  .gitignore  .mcp.json  .npmrc  .taskmaster  AGENT.md  CLAUDE.md  CMakeLists.txt  README_PACKAGE.md  blas_output.json  crate_structure_analysis.md  flake.nix  lapack_graph.json  lapack_parser.py  lapack_to_neo4j_concept.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  task_complexity_analysis.md  test_correct.json  test_fortran_parse.py
.taskmaster/: config.json  state.json
CMAKE/: FindRust.cmake
SRC/: CMakeLists.txt
SRC/SPARSE/: CMakeLists.txt  CMakeLists_D_only.txt  MULTI_PRECISION_README.md  generate_precision_variants.py  generate_precision_variants_v2.py  port_precision.py  test_basic.f90  test_spmv.f90  test_utils.f90
SRC/SPARSE/COO/: CCOO2CSC.f90  CCOO2DEN.f90  CCOOCHECK.f90  CCOOCONV.f90  CCOOFREE.f90  CCOOINIT.f90  CCOOMV.f90  CCOOTRANS.f90  CDEN2COO.f90  DCOO2CSC.f90  DCOO2DEN.f90  DCOOCHECK.f90  DCOOCONV.f90  DCOOFREE.f90  DCOOINIT.f90  DCOOMV.f90  DCOOTRANS.f90  DDEN2COO.f90  SCOO2CSC.f90  SCOO2DEN.f90  SCOOCHECK.f90  SCOOCONV.f90  SCOOFREE.f90  SCOOINIT.f90  SCOOMV.f90  SCOOTRANS.f90  SDEN2COO.f90  ZCOO2CSC.f90  ZCOO2DEN.f90  ZCOOCHECK.f90  ZCOOCONV.f90  ZCOOFREE.f90  ZCOOINIT.f90  ZCOOMV.f90  ZCOOTRANS.f90  ZDEN2COO.f90
SRC/SPARSE/CSC/: CCSC2COO.f90  CCSCFREE.f90  CCSCINIT.f90  CCSCMV.f90  DCSC2COO.f90  DCSCFREE.f90  DCSCINIT.f90  DCSCMV.f90  SCSC2COO.f90  SCSCFREE.f90  SCSCINIT.f90  SCSCMV.f90  ZCSC2COO.f90  ZCSCFREE.f90  ZCSCINIT.f90  ZCSCMV.f90
SRC/SPARSE/CSR/: CCSR2COO.f90  CCSRCSC.f90  CCSRFREE.f90  CCSRINIT.f90  CCSRMV.f90  CGECSR.f90  DCSR2COO.f90  DCSRCSC.f90  DCSRFREE.f90  DCSRINIT.f90  DCSRMV.f90  DGECSR.f90  SCSR2COO.f90  SCSRCSC.f90  SCSRFREE.f90  SCSRINIT.f90  SCSRMV.f90  SGECSR.f90  ZCSR2COO.f90  ZCSRCSC.f90  ZCSRFREE.f90  ZCSRINIT.f90  ZCSRMV.f90  ZGECSR.f90
SRC/SPARSE/IO/: CSPREAD.f90  CSPWRITE.f90  DSPREAD.f90  DSPWRITE.f90  SSPREAD.f90  SSPWRITE.f90  ZSPREAD.f90  ZSPWRITE.f90
SRC/SPARSE/MODULES/: sparse_constants.f90  sparse_types.f90  sparse_types_extended.f90
SRC/SPARSE/TESTING/: CMakeLists.txt  benchmark_sparse.f90  chkxer.f90  dchkaa_sparse.f90  dchksp.f90  debug_csr.f90  debug_spmv.f90  derrsp.f90  dlatsp.f90  dspedge.f90  dspmem.f90  dspnum.f90  dsptests.f90  dtimsp.f90  run_basic_tests.sh  schksp.f90  serrsp.f90  slatsp.f90  test_advanced_operations.f90  test_conversions.f90  test_dcsrcsc_simple.f90  test_io.f90  test_matrices.f90  test_precision_variants.f90  test_report.md  test_spmv.f90  test_spmv_accuracy.f90
SRC/SPARSE/UTILS/: CSPADD2.f90  CSPCOMP.f90  CSPGET.f90  CSPSET.f90  CSPSIZE.f90  CSPSORT.f90  DSPADD2.f90  DSPCOMP.f90  DSPGET.f90  DSPSET.f90  DSPSIZE.f90  DSPSORT.f90  LSAME.f90  SSPADD2.f90  SSPCOMP.f90  SSPGET.f90  SSPSET.f90  SSPSIZE.f90  SSPSORT.f90  ZSPADD2.f90  ZSPCOMP.f90  ZSPGET.f90  ZSPSET.f90  ZSPSIZE.f90  ZSPSORT.f90
SRC/SPARSE/build_sparse/: CMakeCache.txt  Makefile  cmake_install.cmake  dspget_module.mod  sparse_types_extended.mod  test_basic  test_spmv  test_utils
SRC/SPARSE/build_sparse/modules/: sparse_types.mod  sspget_module.mod
TESTING/: CMakeLists.txt
TESTING/SPARSE/: CMakeLists.txt  test_sparse_init.f90
ai_docs/: ControlFlow.md  Functions.md  IO.md  Memory.md  Procedures.md  Research.md  Syntax.md  Types.md
ai_notes/: fortran_mapper_design.md  fortran_mapper_test_workflow.md  sparse_c_bindings_implementation.md
build_sparse/: CMakeCache.txt  Makefile  cmake_install.cmake  test_simple
connectome/: README.md  pyproject.toml
connectome/hooks/fortran/: README.md  pyproject.toml
connectome/hooks/fortran/src/connectome_hooks_fortran/: __init__.py
connectome/hooks/lapack/: README.md  pyproject.toml
connectome/hooks/lapack/src/connectome_hooks_lapack/: __init__.py
connectome/src/connectome/: __init__.py  cli.py
data/: sample_lapack_graph.cypher
docs/: Brainlift.md  GITHUB_MCP_SETUP.md  GRAPH_SCHEMA.md  LAPACK_CYPHER_QUERIES.md  NEO4J_BROWSER_AUTOMATION.md  NEO4J_QUERIES.md  PRD.md  README_PACKAGE.md  USER_GUIDE.md  VISUALIZATION_GUIDE.md
examples/: README.md  analyze_dependencies.py  build_complete_graph.py  demo_error_tracking.py  export_to_formats.py  find_circular_dependencies.py  lapack_cypher_queries.txt  (+4 more)
fortran-mapper/: MIGRATION_GUIDE.md  README.md  pyproject.toml  test_analysis_pipeline.py  test_debug.json  test_fortran_mapper.py
fortran-mapper/.claude-flow/metrics/: performance.json  task-metrics.json
fortran-mapper/ai_notes/: fortran_mapper_modular_test_workflow.md
fortran-mapper/docs/: visualization.md
fortran-mapper/examples/: lapack_integration_demo.py
fortran-mapper/hooks/lapack/: .gitignore  README.md  pyproject.toml  test_lapack_hooks.py
fortran-mapper/hooks/lapack/src/fortran_mapper_hooks_lapack/: __init__.py  creator.py  enricher.py
fortran-mapper/src/fortran_mapper/: __init__.py  cli.py  neo4j_server.py
fortran-mapper/src/fortran_mapper/adapters/: __init__.py  lapack.py
fortran-mapper/src/fortran_mapper/core/: __init__.py  graph.py  nodes.py  parser.py  relationships.py
fortran-mapper/src/fortran_mapper/exporters/: __init__.py  dot.py  graphml.py  json.py  neo4j.py
fortran-mapper/src/fortran_mapper/hooks/: __init__.py  base.py  registry.py
fortran-mapper/src/fortran_mapper/visualization/: __init__.py  graph_generator.py  server.py
fortran-mapper/src/fortran_mapper/visualization/templates/: index.html
rust/: Cargo.toml  README.md
rust/lapack/: Cargo.toml  README.md
rust/lapack-src/: Cargo.toml  README.md
rust/lapack-src/src/: lib.rs
rust/lapack-sys/: Cargo.toml  README.md  build.rs
rust/lapack-sys/examples/: test_bindgen.rs
rust/lapack-sys/src/: lib.rs
rust/lapack-sys/tests/: basic_binding_test.rs  bindings_test.rs
rust/lapack/benches/: README.md  lapack_benchmarks.rs  matrix_types_bench.rs
rust/lapack/scripts/: profile_benchmarks.sh  run_benchmarks.sh
rust/lapack/src/: driver.rs  error.rs  lib.rs  matrix.rs
rust/lapack/src/driver/: linear_systems.rs
rust/lapack/tests/: comprehensive_tests.rs  edge_cases.rs  lapack_test_cases.rs  property_based_tests.rs
(+168 files in other folders)
