[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lapack-util"
version = "0.1.0"
description = "LAPACK computational graph analysis utilities"
authors = [{name = "LAPACK Analysis Team"}]
requires-python = ">=3.8"
dependencies = [
    "neo4j>=5.0",
]

[project.scripts]
lapack-util = "lapack_util.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]