[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortran-mapper"
version = "0.2.0"
description = "A flexible, extensible Fortran code mapper with hook-based customization"
authors = [{name = "LAPACK Analysis Team"}]
requires-python = ">=3.8"
dependencies = [
    "neo4j>=5.0",
    "psutil>=5.0",
    "networkx>=2.8",
    "pydot>=1.4",
]

[project.scripts]
fortran-mapper = "fortran_mapper.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]
