[workspace]
members = [
    "lapack-sys",
    "lapack",
    "lapack-src",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["LAPACK Rust Contributors"]
license = "BSD-3-Clause"
repository = "https://github.com/Reference-LAPACK/lapack"
homepage = "https://www.netlib.org/lapack/"
documentation = "https://docs.rs/lapack"
categories = ["science", "mathematics", "api-bindings"]
keywords = ["lapack", "linear-algebra", "matrix", "blas"]
edition = "2021"
rust-version = "1.72"

[workspace.dependencies]
libc = "0.2"

[profile.release]
lto = true