[package]
name = "lapack-sys"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/lapack-sys"
categories.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Low-level FFI bindings to LAPACK (Linear Algebra PACKage)"
readme = "README.md"

[dependencies]
libc.workspace = true

[build-dependencies]
# Dependencies for code generation will be added here

[features]
default = []