[package]
name = "lapack-sys"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/lapack-sys"
categories.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Low-level FFI bindings to LAPACK (Linear Algebra PACKage)"
readme = "README.md"

[dependencies]
libc.workspace = true
# Temporarily comment out lapack-src to test bindgen in isolation
# lapack-src = { version = "0.1", path = "../lapack-src" }

[lib]
name = "lapack_sys"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
bindgen = "0.69"

[features]
default = ["std"]

# Standard library support
std = []

# Enable tests that require LAPACK to be installed
test-with-lapack = []

# Enable 64-bit integer interface (ILP64)
ilp64 = []

# Pass-through features from lapack crate
# These control which FFI bindings are generated/included
linear-systems = []
least-squares = []
eigenvalues = []
svd = []
factorization = []
orthogonal = []
reduction = []
blas1 = []
blas2 = []
blas3 = []
utility = []
single = []
double = []
complex = []