[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fortran-mapper-hooks-lapack"
version = "0.1.0"
description = "LAPACK-specific hooks for fortran-mapper"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "LAPACK Analysis Team"}
]
license = {text = "MIT"}
keywords = ["fortran", "lapack", "hooks", "code-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "fortran-mapper>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py313"
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.uv.sources]
fortran-mapper = { path = "../.." }
