# Hooks for lapack

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fortran_mapper_hooks_lapack"]

[project]
name = "fortran-mapper-hooks-lapack"
version = "0.1.0"
description = "LAPACK-specific hooks for fortran-mapper"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "LAPACK Analysis Team"}
]
license = {text = "MIT"}
keywords = ["fortran", "lapack", "hooks", "code-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "fortran-mapper>=0.1.0",
]

[tool.uv.sources]
fortran-mapper = { path = "../.." }

[tool.ruff]
target-version = "py313"
line-length = 100
extend-include = ["*.pyi"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "PL",   # pylint
    "PTH",  # flake8-use-pathlib
]
ignore = ["PLR0913"]  # Too many arguments

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=backend",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end tests",
    "requires_auth: marks tests that require authentication",
    "performance: marks tests as performance tests",
    "slow: marks tests as slow running",
]

[tool.coverage.run]
source = ["src/backend"]
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ty.environment]
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]  # adjust to match your layout [1]
exclude = [
  "**/.venv/**",
  "**/.ruff_cache/**",
  "**/.mypy_cache/**",
  "**/__pycache__/**",
  "build/**",
  "dist/**",
]

[tool.ty.terminal]
# Optional: control output formatting/width; useful in CI logs.
output-format = "concise"
